# cookiecutter-sicheng-pythonic-pkg

./: .coverage  .coveragerc  .gitignore  .readthedoc.yaml  .readthedocs.yaml  README.md  codecov.yml  cookiecutter.json  coverage.xml  noxfile.py  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  development.md  doc_requirements.txt  index.md
hooks/: post_gen_project.py  pre_gen_project.py
src/uv_demo_pkg/: __init__.py  squarer.py
tests/: test_squarer.py  test_template.py  test_version.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  .readthedoc.yaml  .readthedocs.yaml  README.md  _typos.toml  codecov.yml  noxfile.py  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: main.yml
{{ cookiecutter.project_slug }}/docs/: conf.py  development.md  index.md
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug}}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_version.py
