[project]
name = "cookiecutter-sicheng-pythonic-pkg"
version = "0.1.0"
description = "cookiecutter for pythonic project with uv"
readme = "README.md"
authors = [
    { name = "sicheng1806", email = "sicheng1806@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
doc = [
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.16.0",
    "sphinx>=8.1.3",
]

##############################
##          Tools           ##
##############################

[tool.uv]
default-groups = ["dev","doc"]

[[tool.uv.index]]
name = "tuna-mirror"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
